objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Annual_Spend_on_Furnishing__c</fullName>
        <label>Annual Spend on Furnishing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Between $100,000 and $300,000</fullName>
                </value>
                <value>
                    <fullName>Between $300,000 and $1,000,000</fullName>
                </value>
                <value>
                    <fullName>More than $1,000,000</fullName>
                </value>
                <value>
                    <fullName>Up to $100,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>Auto-assigned on Web to Lead, online application project 110909 LALO</description>
        <displayFormat>{DD}{MM}{YY}-{00}</displayFormat>
        <externalId>true</externalId>
        <label>Application#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Associate_First_Name__c</fullName>
        <description>The first name of the Associate who submits the Lead</description>
        <label>Associate First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Last_Name__c</fullName>
        <description>The last name of the Associate who submits the Lead</description>
        <label>Associate Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Number__c</fullName>
        <label>Associate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Tax__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Charge Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closest_Store__c</fullName>
        <inlineHelpText>Assigned according to Transporatation Dept&apos;s &quot;air miles&quot; from zip to closest store. Where zip not indicated, assigned to store 000. 041811LALO</inlineHelpText>
        <label>Closest Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Architecture/Construction</fullName>
                </value>
                <value>
                    <fullName>Concept Development</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Furn Fixt &amp; Equip</fullName>
                </value>
                <value>
                    <fullName>Interior Design</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Op Supp &amp; Equip</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <label>EIN Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Additional1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Additional2__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Additional_1__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Additional_2__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name_Additional1__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Additional2__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFA_AV__Address_Validation_Status__c</fullName>
        <defaultValue>&quot;Not Verified&quot;</defaultValue>
        <label>Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Additional1__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Additional2__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This maps to the account to accommodate the trade verified workflow</description>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HQ/Brand</fullName>
                </value>
                <value>
                    <fullName>Owner/Mgt Group</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <label>Membership Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Support_Doc_Rec_d__c</fullName>
        <description>Added field to calculate difference between date application rec&apos;d and date supporting docs received.  This is to take into account when looking at CSC productivity.</description>
        <inlineHelpText>Select date that Supporting Membership Documentation was received in the Trade Membership Outlook Box.</inlineHelpText>
        <label>Membership Support Doc Rec&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 10</fullName>
                </value>
                <value>
                    <fullName>Between 10 and 50</fullName>
                </value>
                <value>
                    <fullName>Between 50 and 200</fullName>
                </value>
                <value>
                    <fullName>More than 200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Additional1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Additional2__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proof_of_Qualification__c</fullName>
        <label>Proof of Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Business License</fullName>
                </value>
                <value>
                    <fullName>Current ASID Membership</fullName>
                </value>
                <value>
                    <fullName>Current AI/IDI provincial registration</fullName>
                </value>
                <value>
                    <fullName>Interior Design Certification (NCID/CCIDC)</fullName>
                </value>
                <value>
                    <fullName>State Professional License</fullName>
                </value>
                <value>
                    <fullName>W9 / Federal ID / EIN Form</fullName>
                </value>
                <value>
                    <fullName>Business ID number</fullName>
                </value>
                <value>
                    <fullName>Resale/Sales Tax Certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Requested</fullName>
                </value>
                <value>
                    <fullName>Potential Opportunity</fullName>
                </value>
                <value>
                    <fullName>No Current Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not Viable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resale_ID_Number__c</fullName>
        <label>Resale ID Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Architecture Firm</fullName>
                </value>
                <value>
                    <fullName>Commercial Design Firm</fullName>
                </value>
                <value>
                    <fullName>Hospitality Architecture Firm</fullName>
                </value>
                <value>
                    <fullName>Hospitality Design Firm</fullName>
                </value>
                <value>
                    <fullName>Residential Architecture Firm</fullName>
                </value>
                <value>
                    <fullName>Residential Interior Design Firm (B2B)</fullName>
                </value>
                <value>
                    <fullName>Landscape Design Firm</fullName>
                </value>
                <value>
                    <fullName>Model Home Stager</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Lighting Product Installer/Contractor</fullName>
                </value>
                <value>
                    <fullName>Plumbing Product Installer/Contractor</fullName>
                </value>
                <value>
                    <fullName>Cabinet Product Installer/Contractor</fullName>
                </value>
                <value>
                    <fullName>Purchasing Firm</fullName>
                </value>
                <value>
                    <fullName>Country Club Owner</fullName>
                </value>
                <value>
                    <fullName>Furniture Dealer</fullName>
                </value>
                <value>
                    <fullName>Commercial Developer</fullName>
                </value>
                <value>
                    <fullName>Commercial Office Owner</fullName>
                </value>
                <value>
                    <fullName>Shared Office Space Provider</fullName>
                </value>
                <value>
                    <fullName>Furniture Rental Company</fullName>
                </value>
                <value>
                    <fullName>Sporting Stadium</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>K-12 School</fullName>
                </value>
                <value>
                    <fullName>Fraternity/Sorority</fullName>
                </value>
                <value>
                    <fullName>City Government Department</fullName>
                </value>
                <value>
                    <fullName>State Government Department</fullName>
                </value>
                <value>
                    <fullName>Federal Government Department</fullName>
                </value>
                <value>
                    <fullName>Assisted Living Facility</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Independent Restaurant Owner</fullName>
                </value>
                <value>
                    <fullName>Luxury Boutique Hotel/Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <description>The number of the store from which the Lead was submitted</description>
        <label>Store Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Additional1__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Additional2__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <label>Web Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Applicaton_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Web_Source__c</field>
            <operation>equals</operation>
            <value>Online Application</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Online Applicaton Leads</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Web_Source__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>Sales_Lead__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>Segment__c</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Olivia,Trish</value>
        </filters>
        <filters>
            <field>Web_Source__c</field>
            <operation>equals</operation>
            <value>Online Application</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Online Contract Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Country_Format_Correction</fullName>
        <active>false</active>
        <errorConditionFormula>!$User.Single_View_of_Customer_Process_User__c &amp;&amp; 
(Country = &quot;USA&quot; ||
Country = &quot;U.S.A.&quot; ||
Country = &quot;United States&quot; ||
Country = &quot;Canada&quot; ||
Country = &quot;Can&quot;)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Please enter the &quot;Country&quot; information for this company&apos;s address exactly as follows: - For United States, enter &quot;US&quot; - For Canada, enter &quot;CA&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Picklist_Value</fullName>
        <active>true</active>
        <description>do not allow user to choose: **Types below are working directly with homeowner**</description>
        <errorConditionFormula>ISPICKVAL(Segment__c, &quot;**Types below are working directly with homeowner**&quot;)</errorConditionFormula>
        <errorDisplayField>Segment__c</errorDisplayField>
        <errorMessage>**Types below are working directly with homeowner** is not a valid selection.</errorMessage>
    </validationRules>
</CustomObject>